--- a/compose.yml
+++ b/compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "1437:1437"
     volumes:
-      - /usr/share/ovenmediaengine/dumps:/app/dumps
+      - ome-media:/app/dumps
       - service-gateway-logs:/app/logs
     environment:
       TZ: Asia/Kolkata
@@ -19,6 +19,7 @@ services:
       OM_URL: http://ovenmediaengine:8081/v1
       OM_HOST_NAME: localhost
       OM_CTRL_SVR: service-gateway:1437
+      OM_DUMPS: /app/dumps
     networks:
       - private
     depends_on:
