--- a/compose.yml
+++ b/compose.yml
@@ -8,6 +8,7 @@ services:
         target: /etc/nginx/nginx.conf
     networks:
       - public
+      - private
     depends_on:
       - service-gateway
   # ✅ Service Gateway
@@ -28,9 +29,9 @@ services:
       PG_USER_FILE: /run/secrets/pg_user
       PG_PASSWORD_FILE: /run/secrets/pg_password
       PG_PORT: 5432
-      OM_URL: http://sp-mini.pro:8081/v1
-      OM_HOST_NAME: sp-mini.pro
-      OM_CTRL_SVR: sp-mini.pro:1437
+      OM_URL: http://ovenmediaengine:8081/v1
+      OM_HOST_NAME: ${OM_HOST_NAME}
+      OM_CTRL_SVR: nginx-service-gateway:${SVR_GTW_PORT}
       OM_DUMPS: /app/dumps
     secrets:
       - pg_user
@@ -92,10 +93,17 @@ services:
     image: drakesoftware/llhls-server-arm64:latest
     container_name: llhls-server-linux
     ports:
-      - "59919:59919"
+      - "80:80"
+      - "443:443"
+    env_file:
+      - ./llhls-server/nginx-certbot.env
+    configs:
+      - source: llhls_server_config
+        target: /etc/nginx/user_conf.d/llhls-server.conf
     restart: unless-stopped
     volumes:
       - ome-media:/usr/share/nginx/html/hls
+      - llhls_nginx_secrets: /etc/letsencrypt
     networks:
       - private
     depends_on:
@@ -109,11 +117,11 @@ services:
       - "4400:4400"
     environment:
       API_URL: "https://api.example.com"
-      CP_SERVER_BASE_URL: "http://sp-mini.pro:1437/api"
-      HLS_URL: "http://sp-mini.pro:59919"
-      SP_RELAY_URL: "http://sp-mini.pro:3001"
-      RTMP_URL: "rtmp://sp-mini.pro:1935"
-      PLAYER_URL: "https://sp-mini.pro:3334"
+      CP_SERVER_BASE_URL: "http://${HOST_NAME}:${SVR_GTW_PORT}/api"
+      HLS_URL: "${HLS_HOST_URL}"
+      SP_RELAY_URL: "http://${HOST_NAME}:3001"
+      RTMP_URL: "rtmp://${HOST_NAME}:1935"
+      PLAYER_URL: "https://${HOST_NAME}:3334"
     volumes:
       - angular_app_config:/etc/nginx/conf.d:ro
     restart: always
@@ -130,11 +138,11 @@ services:
       - coach_app_config:/etc/nginx/conf.d:ro
     environment:
       API_URL: "https://api.example.com"
-      CP_SERVER_BASE_URL: "http://sp-mini.pro:1437/api"
-      HLS_URL: "http://sp-mini.pro:59919"
-      SP_RELAY_URL: "http://sp-mini.pro:3001"
-      RTMP_URL: "rtmp://sp-mini.pro:1935"
-      PLAYER_URL: "https://sp-mini.pro:3334"
+      CP_SERVER_BASE_URL: "http://${HOST_NAME}:${SVR_GTW_PORT}/api"
+      HLS_URL: "${HLS_HOST_URL}"
+      SP_RELAY_URL: "http://${HOST_NAME}:3001"
+      RTMP_URL: "rtmp://${HOST_NAME}:1935"
+      PLAYER_URL: "https://${HOST_NAME}:3334"
     restart: always
     networks:
       - private
@@ -148,14 +156,16 @@ services:
     volumes:
       - mobile_app_conf:/etc/nginx/conf.d:ro
     environment:
-      SP_RELAY_URL: "http://sp-mini.pro:3001"
-      CP_SERVER_BASE_URL: "http://sp-mini.pro:1437/api"
+      SP_RELAY_URL: "http://${HOST_NAME}:3001"
+      CP_SERVER_BASE_URL: "http://${HOST_NAME}:${SVR_GTW_PORT}/api"
     restart: always
     networks:
       - private
 configs:
   nginx_service_gateway_config: 
     file: ./service-gateway/nginx.conf
+  llhls_server_config:
+    file:./llhls-server/llhls-server.conf
 secrets:
   pg_user:
     file: ./pg_user.txt
@@ -179,6 +189,8 @@ volumes:
     driver: local
   ome-media:
     driver: local
+  llhls_nginx_secrets:
+
 
 networks:
   public:
