--- a/llhls-server/llhls-server.conf
+++ b/llhls-server/llhls-server.conf
@@ -1,11 +1,18 @@
-worker_processes auto;
-events {}
+server {
+    listen 443 ssl default_server reuseport;
+    listen [::]:443 ssl default_server reuseport;
 
-http {
-    server {
-        listen 59919;
+    server_name hls.sp-mini.pro;
 
-        location / {
+    # Load the certificate files.
+    ssl_certificate /etc/letsencrypt/live/hlsspminipro/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/hlsspminipro/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/hlsspminipro/chain.pem;
+
+    # Load the Diffie-Hellman parameter.
+    ssl_dhparam /etc/letsencrypt/dhparams/dhparam.pem;
+
+    location / {
 	    add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
@@ -28,6 +35,4 @@ http {
                 video/mp2t ts;
             }
         }
-    }
 }
-
