--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 HOST_NAME=sp-mini.pro
-SVR_GTW_PORT=8080
-OM_HOST_NAME=sp-mini.pro
+SVR_GTW_PORT=80
+OM_HOST_NAME=om.sp-mini.pro
+API_HOST_NAME=api.sp-mini.pro
 HLS_HOST_URL=https://hls.sp-mini.pro
