env vars and compose file synched

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 HOST_NAME=sp-mini.pro
-SVR_GTW_PORT=80
 OM_HOST_NAME=om.sp-mini.pro
 API_HOST_NAME=api.sp-mini.pro
-HLS_HOST_URL=https://hls.sp-mini.pro
+RTMP_HOST_NAME=rtmp.sp-mini.pro
+RELAY_HOST_NAME=relay.sp-mini.pro
+HLS_HOST_NAME=hls.sp-mini.pro
