--- a/nginx.conf
+++ b/nginx.conf
@@ -11,8 +11,25 @@ events {
 
 
 http {
+
+
+    ############## frontend #############
+    upstream frontend {
+        server angular-app-linux:4400;
+    }
+    server {
+        listen 80;
+        server_name sp-mini.pro;
+
+        location / {
+            proxy_pass http://frontend;
+        }
+    }
+    ############## frontend #############
+
+
+    ############## api #############
     upstream api {
-        # flask service name from compose file
         server service-gateway:1437;
     }
 
@@ -24,8 +41,60 @@ http {
             proxy_pass http://api;
         }
     }
+    ############## api #############
+
+
+    ############## hls #############
+    upstream hls {
+        server llhls-server:59919;
+    }
+
+    server {
+        listen 80;
+        server_name hls.sp-mini.pro;
+
+        location / {
+            proxy_pass http://hls;
+        }
+    }
+    ############## hls #############
+
+
+    ############## rtmp #############
+    upstream rtmp {
+        server ovenmediaengine:1935;
+    }
+
+    server {
+        listen 80;
+        server_name rtmp.sp-mini.pro;
+
+        location / {
+            proxy_pass http://rtmp;
+        }
+    }
+    ############## rtmp #############
+
+
+
+    ############## relay #############
+    upstream relay {
+        server relay-server:3001;
+    }
+
+    server {
+        listen 80;
+        server_name relay.sp-mini.pro;
+
+        location / {
+            proxy_pass http://relay;
+        }
+    }
+    ############## relay #############
+
+
+    ############## om_llhls #############
     upstream om_llhls {
-        # flask service name from compose file
         server ovenmediaengine:3334;
     }
 
@@ -37,4 +106,5 @@ http {
             proxy_pass http://om_llhls;
         }
     }
+    ############## om_llhls #############
 }
