rtmp correction to nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -70,7 +70,7 @@ http {
         server_name rtmp.sp-mini.pro;
 
         location / {
-            proxy_pass http://rtmp;
+            proxy_pass rtmp://rtmp;
         }
     }
     ############## rtmp #############
