rtmp correction to nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,16 @@ events {
     worker_connections 1024;
 }
 
+stream {
+    upstream rtmp_backend {
+        server ovenmediaengine:1935;
+    }
 
+    server {
+        listen 1935;
+        proxy_pass rtmp_backend;
+    }
+}
 http {
 
 
@@ -61,18 +70,18 @@ http {
 
 
     ############## rtmp #############
-    upstream rtmp {
-        server ovenmediaengine:1935;
-    }
+    # upstream rtmp {
+    #     server ovenmediaengine:1935;
+    # }
 
-    server {
-        listen 80;
-        server_name rtmp.sp-mini.pro;
+    # server {
+    #     listen 80;
+    #     server_name rtmp.sp-mini.pro;
 
-        location / {
-            proxy_pass rtmp://rtmp;
-        }
-    }
+    #     location / {
+    #         proxy_pass rtmp://rtmp;
+    #     }
+    # }
     ############## rtmp #############
 
 
