rtmp correction to nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,8 @@ stream {
     }
 
     server {
-        listen 1935;
+        listen 80;
+        server_name rtmp.sp-mini.pro;
         proxy_pass rtmp_backend;
     }
 }
