--- a/compose.yml
+++ b/compose.yml
@@ -68,9 +68,9 @@ services:
   # ✅ OvenMediaEngine (OME) Streaming Server
   ovenmediaengine:
     image: drakesoftware/ome-arm64:latest
-    # ports:
+    ports:
     #   - "8081:8081"
-    #   - "1935:1935"
+      - "1935:1935"
     #   - "3333:3333"
     #   - "3334:3334"
     volumes:
