--- a/compose.yml
+++ b/compose.yml
@@ -52,7 +52,7 @@ services:
       PG_PASSWORD_FILE: /run/secrets/pg_password
       PG_PORT: 5432
       OM_URL: http://ovenmediaengine:8081/v1
-      OM_HOST_NAME: ${HOST_NAME}
+      OM_HOST_NAME: ${OM_HOST_NAME}
       OM_CTRL_SVR: service-gateway:1437
       OM_DUMPS: /app/dumps
     secrets:
