--- a/nginx.conf
+++ b/nginx.conf
@@ -106,18 +106,15 @@ http {
     upstream om_llhls {
         server ovenmediaengine:3334;
     }
-    
+
     server {
-        listen 80;
+        listen 443 ssl default_server reuseport;
+        listen [::]:443 ssl default_server reuseport;
+
         server_name om.sp-mini.pro;
-    
+
         location / {
             proxy_pass https://om_llhls;
-            proxy_ssl_verify off;            # Disable certificate verification if necessary (e.g., self-signed cert)
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
     ############## om_llhls #############
